--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/firebase": "^6.1.1",
+    "firebase": "^7.19.1",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
