--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
+    "@nuxtjs/netlify-files": "^1.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5"
